--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
+    "firebase-admin": "^13.2.0",
     "livereload": "^0.9.3"
   }
 }
