--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Likeemapples/1800_2025_BBY23#readme",
   "dependencies": {
+    "cloudinary": "^2.6.0",
     "connect-livereload": "^0.6.1",
     "express": "^4.21.2",
     "firebase-admin": "^13.2.0",
