--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,5 +26,8 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.2.0",
     "livereload": "^0.9.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
